# hxedit

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_GUIDE.md  LICENSE  README.md  README_CN.md  insert-design.md  issues.md
.github/workflows/: ci-release.yml
licenses/: LICENSE-MIT  THIRD_PARTY_NOTICES.txt
licenses/keystone/: FOSS-NOTICE.txt
src/: action.rs  app.rs  cli.rs  clipboard.rs  config.rs  copy.rs  error.rs  export.rs  lib.rs  main.rs  mode.rs  profile.rs
src/app/: clipboard_ops.rs  command_input.rs  commands.rs  data_state.rs  diff_state.rs  disasm_editing.rs  editing_state.rs  events.rs  helpers.rs  inspector_state.rs  mode_state.rs  mouse.rs  navigation.rs  render.rs  search.rs  state.rs  symbol_state.rs  tests.rs  text_cursor.rs  undo.rs
src/app/commands/: file_nav.rs  hash_diff.rs  inspector.rs  search_disasm.rs  symbols.rs  transform.rs
src/app/events/: dispatch.rs  editor.rs  finish.rs  inspector_edit.rs  tests.rs
src/app/navigation/: common.rs  disasm.rs  hex.rs  mod.rs
src/app/render/: diff_projection.rs  main_view.rs  side_panel.rs  tests.rs
src/commands/: hints.rs  mod.rs  parser.rs  types.rs
src/core/: document.rs  file_view.rs  mod.rs  page_cache.rs  patch.rs  piece_table.rs  save.rs  search.rs
src/core/document/: edit.rs  mod.rs  read.rs  search.rs
src/diff/: engine.rs  mod.rs  source.rs
src/disasm/: cache.rs  decode.rs  mod.rs  patch.rs  regions.rs  state.rs  text.rs  types.rs
src/disasm/assembler/: keystone.rs  mod.rs  registry.rs  symbols.rs  traits.rs
src/disasm/backend/: capstone.rs  mod.rs  registry.rs  traits.rs
src/executable/: detect.rs  mod.rs  types.rs
src/executable/detect/: elf.rs  macho.rs  mod.rs  object_meta.rs  pe.rs  util.rs
src/format/: detect.rs  edit.rs  mod.rs  parse.rs  types.rs
src/format/defs/: bmp.rs  elf.rs  gif.rs  gzip.rs  jpeg.rs  mod.rs  png.rs  tar.rs  wav.rs  zip.rs
src/format/defs/elf/: header.rs  layout.rs  mod.rs  payloads.rs  structures.rs  symbols.rs  tests.rs  versions.rs
src/format/defs/macho/: mod.rs
src/format/defs/pe/: mod.rs
src/input/: command.rs  edit.rs  inspector.rs  inspector_edit.rs  keymap.rs  mod.rs  mouse.rs  normal.rs  side_panel.rs  side_panel_edit.rs  visual.rs
src/util/: format.rs  geometry.rs  mod.rs  parse.rs
src/view/: ascii_grid.rs  byte_style.rs  command_line.rs  data_panel.rs  diff_panel.rs  disasm_grid.rs  gutter.rs  hex_grid.rs  inspector.rs  layout.rs  mod.rs  palette.rs  status.rs  symbol_panel.rs
tests/: cli_smoke.rs  command_parser.rs  hash_large.rs  insert_mode.rs  perf_bench.rs  save_large.rs  save_patch.rs  save_rewrite.rs  search.rs  search_large.rs
