[package]
name = "hxedit"
version = "0.1.1"
edition = "2021"
description = "A terminal hex editor optimized for large files"
license = "GPL-2.0-only"
authors = ["ycsgg <ycs_gg@outlook.com>"]
repository = "https://github.com/ycsgg/hxedit"
homepage = "https://github.com/ycsgg/hxedit"
readme = "README.md"
keywords = ["hex", "editor", "tui", "binary", "terminal"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[features]
default = ["default-bundle"]
default-bundle = [
    "disasm-capstone-full",
    "disasm-capstone-x86",
    "disasm-capstone-arm64",
    "symbols",
]
disasm = []
symbols = ["disasm", "dep:object", "dep:symbolic-common", "dep:symbolic-demangle"]
asm = ["disasm", "dep:keystone-engine"]
full = ["default-bundle", "asm"]
disasm-capstone = ["disasm", "dep:capstone"]
disasm-capstone-full = ["disasm-capstone", "capstone/full"]
disasm-capstone-x86 = ["disasm-capstone", "capstone/arch_x86"]
disasm-capstone-arm64 = ["disasm-capstone", "capstone/arch_arm64"]
disasm-iced-x86 = ["disasm"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
crossterm = "0.28"
digest = "0.10"
md-5 = "0.10"
memchr = "2.7"
ratatui = "0.29"
sha1 = "0.10"
sha2 = "0.10"
supports-color = "3"
thiserror = "2.0"
capstone = { version = "0.14", default-features = false, features = ["std"], optional = true }
object = { version = "0.39", optional = true }
symbolic-common = { version = "12.18", optional = true }
symbolic-demangle = { version = "12.18", optional = true }
keystone-engine = { version = "0.1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
keystone-engine = { path = "vendor/keystone-engine" }
